--- a/PouBDSMultiplayer/PouBDSMultiplayer/PouBDSMultiplayer.csproj
+++ b/PouBDSMultiplayer/PouBDSMultiplayer/PouBDSMultiplayer.csproj
@@ -64,6 +64,12 @@
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="PouRtxEasterEgg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PouRtxEasterEgg.Designer.cs">
+      <DependentUpon>PouRtxEasterEgg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scoreboard.cs">
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PouRtxEasterEgg.resx">
+      <DependentUpon>PouRtxEasterEgg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
